feat(TS-48): 인기 강좌 목록 조회 기능 구현 (#87)
* feat: Schedule 엔티티에 관심과목 수 관리 기능 추가

- wish_count 필드 추가 (기본값 0, null 불가)
- 관심과목 증가/감소 메서드 추가 (incrementWishCount, decrementWishCount)
- decrementWishCount 메서드에 음수 방지 로직 포함
- lombok 어노테이션 활용하여 코드 개선

* feat: 관심과목 등록/삭제 시 wishCount 업데이트 로직 추가

- 관심과목 등록 시 해당 과목의 wishCount 증가
- 관심과목 삭제 시 해당 과목의 wishCount 감소

* feat: 인기 과목 조회를 위한 Repository 메서드 추가

- wish_count 기준 내림차순 정렬 쿼리 메서드 추가
- Pageable을 통한 조회 개수 제한 지원

* feat: 인기 과목 조회 API 구현

- 인기 과목 순위 계산 로직 구현 (동일 wish_count는 같은 순위 부여)
- 인기 과목 조회 API 엔드포인트 추가 (/api/schedules/popular)
- limit 파라미터를 통한 조회 개수 제어 기능 추가

* refactor: 인기 과목 순위 계산 로직 개선

- 순위 계산 로직을 RankInfo 클래스로 분리하여 캡슐화
- calculatePopularSchedulesWithRank 메서드 추출로 책임 분리